--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             <h2>Project 4</h2>
             <p>This is a brief description of Project 4.</p>
         </div>
-        <!--
+        
         <div class="portfolio-item">
-            <img src="image5.jpg" alt="Project 5">
+            <img src="./WORK UI-UX/AgricBusiness.jpg" alt="Project 5">
             <h2>Project 5</h2>
-            <p>This is a brief description of Project 5.</p>
+            <p>I can create a more complex design that allows only a very skillful web design -"artist"- if I should say to design it using jss or any styling language/library.</p>
         </div>
-
+        <!--
         <div class="portfolio-item">
             <img src="image6.jpg" alt="Project 6">
             <h2>Project 6</h2>
